src/components/Tabs/Tabs.css
.main {
  width: 100%;
  font-family: var(--font-family) !important;

  :global {
    .bp3-tabs {
      width: 100%;
    }

    .bp3-tab[aria-selected='true'] {
      color: var(--grey-800);
    }

    .bp3-tab:not([aria-disabled='true']):hover {
      color: var(--primary-6);
    }
  }
}

.horizontal {
  :global {
    .bp3-tab {
      margin-top: var(--spacing-5);
      margin-bottom: var(--spacing-4);
      color: var(--grey-500);
    }

    .bp3-tab-list {
      border-bottom: 2px solid var(--grey-200);
    }

    .bp3-tab-list > *:not(:last-child) {
      margin-right: 30px;
    }

    .bp3-tab-indicator-wrapper {
      top: 12px;
    }

    .bp3-tab-indicator-wrapper .bp3-tab-indicator {
      height: 3px;
      background-color: var(--primary-7);
      border-radius: var(--spacing-2) var(--spacing-2) var(--spacing-0) var(--spacing-0) !important;
    }
  }
}

.vertical {
  :global {
    .bp3-tab {
      color: var(--grey-500);
    }

    .bp3-tab-indicator-wrapper {
      background-color: var(--grey-100) !important;
    }

    .bp3-tab-indicator-wrapper .bp3-tab-indicator {
      width: 3px;
      background-color: var(--primary-7) !important;
      left: 100% !important;
    }

    .bp3-tab[aria-selected='true'] {
      color: var(--primary-7);
    }
  }
}

